Fixed spacing for the picture and text flex. Also fixed alignment bug on navbar

--- a/src/components/navbar/NavBar.css
+++ b/src/components/navbar/NavBar.css
@@ -114,7 +114,7 @@
   align-items: center;
 }
 
-@media screen and (max-width: 960px) {
+@media screen and (max-width: 1200px) {
   .nav-menu {
     display: flex;
     flex-direction: column;
@@ -298,7 +298,7 @@
   align-items: center;
 }
 
-@media screen and (max-width: 960px) {
+@media screen and (max-width: 1200px) {
   .dark-nav-menu {
     display: flex;
     flex-direction: column;
